--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
   <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
-
-  <div class="container">
-    <div class="card">
-      <div class="img">
-        <img src="images/image-product-desktop.jpg" alt="">
-      </div>
-      <div class="text-box">
-        <h6 class="prod-category">Perfume</h6>
-        <h2 class="prod-name">Gabrielle Essence Eau De Parfum</h2>
-        <p class="prod-info">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-          Perfumer-Creator for the House of CHANEL.</p>
-        <div class="price">
-          <p class="current-price">$149.99</p>
-          <p class="old-price">$169.99</p>
-        </div> 
-        <button class="btn"><img src="images/icon-cart.svg" alt="icon">Add to Cart</button> 
-      </div>
-    </div>
-  </div>
-</body>
+  <body>
+    <main> 
+      <article class="card-section">
+        <div class="container">
+          <div class="card">
+            <div class="img">
+              <img src="images/image-product-desktop.jpg" alt="">
+            </div>
+            <div class="text-box">
+              <h1 class="prod-category">Perfume</h1>
+                <h2 class="prod-name">Gabrielle Essence Eau De Parfum</h2>
+              <p class="prod-info">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+                Perfumer-Creator for the House of CHANEL.</p>
+              <div class="price">
+                <p class="current-price">$149.99</p>
+                <p class="old-price">$169.99</p>
+              </div> 
+              <button class="btn"><img src="images/icon-cart.svg" alt="icon">Add to Cart</button> 
+            </div>
+          </div>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
