--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
           <div class="card">
             <div class="img">
-              <img src="images/image-product-desktop.jpg" alt="">
+              <img src="images/image-product-desktop.jpg" alt="Product preview card component for Frontend Mentor website">
             </div>
             <div class="text-box">
               <h1 class="prod-category">Perfume</h1>
